# advisoryopinions

./: README.md  pyproject.toml
.github/workflows/: scrape.yml
advisoryopinions/: ao.py  cfpb.py  doc.py  doj.py  dol.py  fec.py  ftc.py  hhs.py  lsc.py  oge.py  scrape.py
data/CFPB/: 2020-11-30-CFPB-a32e8677bcac72ab4cc94169d1e392d6b1434c932cbeeb1233c275d14ca4cdda.json  2020-11-30-CFPB-bde7fbd8cac7687e41f50c4b3498a0a29c3822a159856e5459f13413b5d5f1ff.json  2020-12-21-CFPB-a478c5fab46a7c3e4afeedad9a77c9e8bef59942933c2b2dd51180e83274307e.json  2021-11-04-CFPB-366ae0cf14d8b21666befc5c48de0e44dbf9bb9608c177d200aeaf965ad1eb0a.json  2022-05-09-CFPB-be8614eb400c25ddb655dbfcd2c688770eaebdec3a63d13c9522575e473ae8a7.json  2022-06-29-CFPB-2c31a7fff20b00e4c30ab3b854d5a2856f372aa2a0f50fb2fcbf33d5fb934b68.json  2022-07-07-CFPB-a76791df2ebc6f17fbfa0d6f0463f42e102d4bc79a967d95b319e06179da542d.json  2022-10-20-CFPB-a9e8bd3524df004cbfdbe1c234bce660c3dde000f822afb82c6c365c0142c1af.json  2023-02-07-CFPB-0bd57716ecedcb31587f080a4fd347af551f0b36f84ca564215d065f0303f189.json  2023-04-26-CFPB-a5624d86ea7dce7cd88a5b519af9f6b4ef1d366d61098f44af19d51f88f9965f.json  2023-10-11-CFPB-28f029f6badb24302b19e3e2e1995b0ad5b842a7c7f3a891707f5070d2a5b9d9.json  2024-01-11-CFPB-17ac5b7e0fd474a9fbe67d375bbec8fd665a7322e8fc11b7a0e48be020092a20.json  2024-01-11-CFPB-7691a840f3e70b66af6c84599bffcd1af7e99f98f6b363b5236ba4e334dd280b.json
data/DOC/: 2003-05-06-DOC-854b03365a5d25b7c4681017dbb9a58877f1cc819903139b17f81b50b2666b5c.json  (+79 more)
data/DOL/: 1979-11-30-DOL-1980-27A.json  1980-01-02-DOL-1980-01A.json  (+814 more)
(+5612 files in other folders)
